--- a/style.css
+++ b/style.css
@@ -1,8 +1,51 @@
-#field td {
-    width: 50px;
-    height: 50px;
+* {
+    box-sizing: border-box;
+}
+
+.wrapper {
+    height: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.winner {
+    background-color: grey;
+    width: 300px;
+    height: 0px;
+    position: absolute;
+    border-radius: 10px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-family: 'Roboto', sans-serif;
+    font-weight: 500;
+    text-transform: uppercase;
+    font-size: 25px;
+    color: green;
+}
+
+winner:after {
+    content: '';
+    width: 100%;
+    height: 100%;
+    display: block;
+    background-color: rgba(0, 0, 0, 0.5);
+    position: absolute;
+}
+
+.field {
+    border-collapse: collapse;
+}
+
+td {
+    width: 150px;
+    height: 150px;
     border: 1px solid black;
     text-align: center;
     font-weight: bold;
     cursor: pointer;
+    font-size: 60px;
+    border-radius: 5px;
+    background-color: grey;
 }
